--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0"
+        "illuminate/database": "~5.5.0|~5.6.0|~5.7.0|^6.0",
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|^6.0"
     },
     "require-dev": {
         "ext-pdo_sqlite": "*",
         "mockery/mockery": "^1.0.0",
-        "orchestra/testbench": "~3.5.0|~3.6.0",
-        "phpunit/phpunit" : "^7.0"
+        "orchestra/testbench": "~3.5.0|~3.6.0|^4.0|^5.0",
+        "phpunit/phpunit" : "^7.0|^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
